// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useState should decrements count value on click 1`] = `
<div>
  <p>Count: -1</p> <button class="increment">Increment</button> <button class="decrement">Decrement</button>
</div>
`;

exports[`useState should get count value when trigger method 1`] = `
<div>
  <p>Count: 0</p> <button class="increment">Increment</button> <button class="decrement">Decrement</button>
</div>
`;

exports[`useState should increments count value on click 1`] = `
<div>
  <p>Count: 1</p> <button class="increment">Increment</button> <button class="decrement">Decrement</button>
</div>
`;
